--- a/index.html
+++ b/index.html
@@ -3,65 +3,28 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>HTML Form</title>
+        <title>HTML Form Validation</title>
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <form id="loginForm" method="POST">
+        <form>
             <div>
-                <label for="username">Username </label>
-                <input placeholder="Enter your username" type="text" id="username" name="username" minlength="5" required />
+                <label for="username">Username</label>
+                <input class="username" type="text" id="username" name="username" minlength="6" maxlength="12" required />
+            </div>
+            <div>
+                <label for="password">password</label>
+                <input class="password" type="password" id="password" name="password" placeholder="Type your password" />
             </div>
             <div>
                 <label for="age">Age</label>
-                <input placeholder="Enter your Age" type="number" id="age" name="age" min="18" required />
+                <input type="number" min="18" max="35" class="age" />
             </div>
             <div>
-                <label for="password">Password </label>
-                <input placeholder="Enter your password" type="password" id="password" name="password" required />
+                <input type="checkbox" class="sub" />
+                <label for="sub">Subscribe</label>
             </div>
-            <div>
-                <label for="feedback">Feedback</label>
-                <textarea name="" id="" cols="5" rows="4    " placeholder="Enter your message"></textarea>
-            </div>
-
-            <input type="radio" name="burger" />Option 1 <input type="radio" name="burger" />Option 2
-
-            <input type="checkbox" name="cheese" /> Cheese <input type="checkbox" name="cheese" /> Lettuce
-            <input type="checkbox" name="cheese" /> Ketchup
-
-            <input type="date" />
-
-            <select name="" id="">
-                <option selected disabled>Select meal</option>
-                <option value="">Breakfast</option>
-                <option value="">Lunch</option>
-                <option value="">Dinner</option>
-            </select>
-
-            <div>
-                <input list="browsers" name="fav" />
-                <datalist id="browsers">
-                    <option>Edge</option>
-                    <option>Opera</option>
-                    <option>Safari</option>
-                </datalist>
-            </div>
-
-            <button type="submit">Login</button>
-            <button type="button" id="clear">Clear</button>
+            <button>Login</button>
         </form>
-
-        <script>
-            // form.onsubmit = function (e) {
-            //     e.preventDefault();
-            // };
-
-            let form = document.getElementById("loginForm");
-            let clearForm = document.getElementById("clear");
-
-            clearForm.onclick = function () {
-                form.reset();
-            };
-        </script>
     </body>
 </html>
